// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Blogs render default 1`] = `
<div>
  <div
    class="pb-16"
    id="id"
  >
    <div
      class="container mx-auto px-8"
    >
      <div
        class="text-center py-16 "
      >
        <h2
          class="text-4xl uppercase  mb-8"
        >
          <b>
            title
          </b>
        </h2>
        <p>
          subtitle
        </p>
      </div>
      <div
        class="grid grid-cols-1 gap-8 md:grid-cols-2 lg:grid-cols-4"
      >
        <a
          href="url"
        >
          <div
            class="overflow-hidden rounded border shadow shadow"
          >
            <div
              class="p-4"
            >
              <h2
                class="mb-2"
              >
                <b>
                  title
                </b>
              </h2>
              <p
                class="mb-2 text-justify"
              />
              <p
                class="text-gray-500"
              >
                date
              </p>
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Blogs render without backgroundImage 1`] = `
<div>
  <div
    class="pb-16"
    id="id"
  >
    <div
      class="container mx-auto px-8"
    >
      <div
        class="text-center py-16 "
      >
        <h2
          class="text-4xl uppercase  mb-8"
        >
          <b>
            title
          </b>
        </h2>
        <p>
          subtitle
        </p>
      </div>
      <div
        class="grid grid-cols-1 gap-8 md:grid-cols-2 lg:grid-cols-4"
      >
        <a
          href="url"
        >
          <div
            class="overflow-hidden rounded border shadow shadow"
          >
            <div
              class="p-4"
            >
              <h2
                class="mb-2"
              >
                <b>
                  title
                </b>
              </h2>
              <p
                class="mb-2 text-justify"
              />
              <p
                class="text-gray-500"
              >
                date
              </p>
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Blogs render without blogs 1`] = `
<div>
  <div
    class="pb-16"
    id="id"
  >
    <div
      class="container mx-auto px-8"
    >
      <div
        class="text-center py-16 "
      >
        <h2
          class="text-4xl uppercase  mb-8"
        >
          <b>
            title
          </b>
        </h2>
        <p>
          subtitle
        </p>
      </div>
      <div
        class="grid grid-cols-1 gap-8 md:grid-cols-2 lg:grid-cols-4"
      />
    </div>
  </div>
</div>
`;

exports[`Blogs render without urlToImage 1`] = `
<div>
  <div
    class="pb-16"
    id="id"
  >
    <div
      class="container mx-auto px-8"
    >
      <div
        class="text-center py-16 "
      >
        <h2
          class="text-4xl uppercase  mb-8"
        >
          <b>
            title
          </b>
        </h2>
        <p>
          subtitle
        </p>
      </div>
      <div
        class="grid grid-cols-1 gap-8 md:grid-cols-2 lg:grid-cols-4"
      >
        <a
          href="url"
        >
          <div
            class="overflow-hidden rounded border shadow shadow"
          >
            <div
              class="p-4"
            >
              <h2
                class="mb-2"
              >
                <b>
                  title
                </b>
              </h2>
              <p
                class="mb-2 text-justify"
              />
              <p
                class="text-gray-500"
              >
                date
              </p>
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;
